--- a/py4e/ex_07/ex_07.ipynb
+++ b/py4e/ex_07/ex_07.ipynb
@@ -2,39 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "source": [
-    "rfile = open('mbox-short.txt')\r\n",
-    "print(rfile)"
-   ],
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "<_io.TextIOWrapper name='mbox-short.txt' mode='r' encoding='cp1252'>\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "rfile = open('mbox-short.txt')\n",
+    "print(rfile)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "source": [
-    "#opening the file\r\n",
-    "rfile = open('mbox-short.txt')\r\n",
-    "print(rfile)\r\n",
-    "#reading the file \r\n",
-    "for line in rfile:\r\n",
-    "    #removing the blank spaces on the right\r\n",
-    "    line = line.rstrip()\r\n",
-    "    print(line)    "
-   ],
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "<_io.TextIOWrapper name='mbox-short.txt' mode='r' encoding='cp1252'>\n",
       "From stephen.marquard@uct.ac.za Sat Jan  5 09:14:16 2008\n",
@@ -1950,27 +1941,25 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "#opening the file\n",
+    "rfile = open('mbox-short.txt')\n",
+    "print(rfile)\n",
+    "#reading the file \n",
+    "for line in rfile:\n",
+    "    #removing the blank spaces on the right\n",
+    "    line = line.rstrip()\n",
+    "    print(line)    "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "source": [
-    "#opening the file\r\n",
-    "rfile = open('mbox-short.txt')\r\n",
-    "print(rfile)\r\n",
-    "#reading the file \r\n",
-    "for line in rfile:\r\n",
-    "    #removing the blank spaces on the right\r\n",
-    "    line = line.rstrip()\r\n",
-    "    #Transforming all in upper case\r\n",
-    "    line = line.upper()\r\n",
-    "    print(line)   "
-   ],
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "<_io.TextIOWrapper name='mbox-short.txt' mode='r' encoding='cp1252'>\n",
       "FROM STEPHEN.MARQUARD@UCT.AC.ZA SAT JAN  5 09:14:16 2008\n",
@@ -3886,75 +3875,86 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "#opening the file\n",
+    "rfile = open('mbox-short.txt')\n",
+    "print(rfile)\n",
+    "#reading the file \n",
+    "for line in rfile:\n",
+    "    #removing the blank spaces on the right\n",
+    "    line = line.rstrip()\n",
+    "    #Transforming all in upper case\n",
+    "    line = line.upper()\n",
+    "    print(line)   "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "source": [
-    "#opening the file\r\n",
-    "rfile = open('mbox-short.txt')\r\n",
-    "print(rfile)\r\n",
-    "check = 0\r\n",
-    "count = 0\r\n",
-    "item = 'X-DSPAM-Confidence:'\r\n",
-    "len(item)\r\n",
-    "sum_value = 0.0\r\n",
-    "#reading the file \r\n",
-    "for line in rfile:\r\n",
-    "    #searching on the line if it encounters “X-DSPAM-Confidence:” \r\n",
-    "    check = line.find(item)    \r\n",
-    "    #printing the index if it finds, count how many times\r\n",
-    "    if check > -1:\r\n",
-    "        count = 1 + count\r\n",
-    "        #get the number in the line then summing it in a variable  \r\n",
-    "        value = line[len(item)+1:] \r\n",
-    "        sum_value = sum_value + float(value)   \r\n",
-    "    \r\n",
-    "#printing the average\r\n",
-    "print ('Average spam confidence: ', sum_value/count)   "
-   ],
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "<_io.TextIOWrapper name='mbox-short.txt' mode='r' encoding='cp1252'>\n",
       "Average spam confidence:  0.7507185185185187\n"
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "#opening the file\n",
+    "rfile = open('mbox-short.txt')\n",
+    "print(rfile)\n",
+    "check = 0\n",
+    "count = 0\n",
+    "item = 'X-DSPAM-Confidence:'\n",
+    "len(item)\n",
+    "sum_value = 0.0\n",
+    "#reading the file \n",
+    "for line in rfile:\n",
+    "    #searching on the line if it encounters “X-DSPAM-Confidence:” \n",
+    "    check = line.find(item)    \n",
+    "    #printing the index if it finds, count how many times\n",
+    "    if check > -1:\n",
+    "        count = 1 + count\n",
+    "        #get the number in the line then summing it in a variable  \n",
+    "        value = line[len(item)+1:] \n",
+    "        sum_value = sum_value + float(value)   \n",
+    "    \n",
+    "#printing the average\n",
+    "print ('Average spam confidence: ', sum_value/count)   "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "b7a0eeec05bf01b642157d05502471234af548168a2403572fa197cf2e81eaeb"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.8.8",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.8 64-bit ('base': conda)"
-  },
-  "interpreter": {
-   "hash": "b7a0eeec05bf01b642157d05502471234af548168a2403572fa197cf2e81eaeb"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
